--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@ header{
 nav{
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    align-items: center;
+    height: 3em;
 }
 
 .container{
-    width: 100%;
-    min-height: 90vh;
+    height: calc(100vh - 6em);
     background-color: aqua;
     display: flex;
     flex-direction: column;
@@ -30,12 +30,21 @@ nav{
 }
 
 #title{
+    width: 50%;
     font-size: 3em;
-    padding: 50px;
+    padding: 20px;
+}
+
+#joke{
+    font-size: 1.5em;
 }
 
 .remove{
     display: none;
+}
+
+footer{
+    height: 3em;
 }
 
 .copy{
@@ -45,13 +54,14 @@ nav{
 
 #box_game{
     width: 600px;
-    margin: 20px auto;
+    margin: 10px auto;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
 }
 
 .size{
+    padding-top: 6em;
     font-size: 3em;
     justify-content: center;
     align-items: center;
@@ -67,8 +77,8 @@ nav{
 }
 
 .hard{
-    width: 3.5em;
-    height: 3.5em;
+    width: calc(100% / 10);
+    height: 60px;
 }
 
 .medium{
@@ -83,8 +93,9 @@ nav{
 
 #refresh{
     width: fit-content;
-    margin: 10px auto;
-    padding: 1em;
+    margin: auto;
+    padding: .5em;
+    border-radius: .5em;
 }
 
 .select{
