--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ footer{
 
 #box_game{
     width: 600px;
-    margin: 10px auto;
+    margin: 20px auto;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -77,7 +77,7 @@ footer{
 }
 
 .hard{
-    width: calc(100% / 10);
+    width: calc(100% / 7);
     height: 60px;
 }
 
@@ -87,8 +87,8 @@ footer{
 }
 
 .easy{
-    width: calc(100% / 7);
-    height: 83px;
+    width: calc(100% / 10);
+    height: 60px;
 }
 
 #refresh{
@@ -98,10 +98,10 @@ footer{
     border-radius: .5em;
 }
 
-.select{
+.win{
     background-color: rgb(0, 110, 255);
 }
 
-.error{
+.lose{
     background-color: red;
 }
